--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-notion-x": "^7.4.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "typescript": "^5.3.3"
   }
 }
